fixed social panel's vertical alignment

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ a.imglink {
 	width: 152px;
 	background-color: white;
 	position: fixed;
+	top: 35px;
 	right: 26px;
 	display: none;
 	z-index: 2;
